Templates/vpc-securitygroup.yaml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  vpcStackName: #VPC Name
    Description: 'Name of your VPC CFN Stack'
    Type: String
    Default: 'sgpvpc'
    AllowedValues:
      - sgpvpc
      - sydvpc
      - tkovpc
Resources: 
  albSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'ALB Security Group'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
      VpcId:
        Fn::ImportValue:
          !Sub ${vpcStackName}-VPCID
      Tags:
        - Key: 'Name'
          Value: 'Kumoribay Master VPC Security Group'
  vpcCustomSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'kumoribay-master vpc Custom Security Group'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: '138.75.250.15/32'
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref albSecurityGroup
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: '0.0.0.0/0'
      VpcId:
        Fn::ImportValue:
          !Sub ${vpcStackName}-VPCID
      Tags:
        - Key: 'Name'
          Value: 'Kumoribay Master VPC Security Group'
Outputs:
  vpcCustomSecurityGroupID: #logicalID
    Description: 'Kumoribay Master VPC SecurityGroup ID'
    Value:
      !Ref vpcCustomSecurityGroup # the vaule of export is here
    Export:
      Name:
        !Sub ${AWS::StackName}-vpcSecurityGroupID # the name of infra-stack export
  albSecurityGroupID: #logicalID
    Description: 'Kumoribay Master VPC SecurityGroup ID'
    Value:
      !Ref albSecurityGroup # the vaule of export is here
    Export:
      Name:
        !Sub ${AWS::StackName}-albSecurityGroupID # the name of infra-stack export
